# gpvdm

./: LICENSE.md  README.md  makefile  sim.gpvdm
gpvdm_core/: LICENSE.txt  Makefile.am  README.md  configure.ac
gpvdm_core/cluster/: cal_path.c  clean.c  command.c  crypto.inp  debug.c  encrypt.c  get_data.c  head.c  head.inp  inp.c  inp.h  inp_struct.h  ip.c  jobs.c  jobs_save_load.c  kill_pid.c  killall.c  load.c  log.c  main.c  makefile  message.c  node.c  node.inp  node_list.inp  nodes.c  packet.c  poweroff.c  progress.c  quit.c  register.c  run_jobs.c  rx_file.c  rx_loop.c  sleep.c  state.c  state.h  sync.c  tx_file.c  tx_packet.h  (+2 more)
gpvdm_core/cluster_/: Makefile.am
gpvdm_core/debian/: changelog  control  control~  copyright  files  rules  watch
gpvdm_core/device_lib/: a-silicon.gpvdm  afm_ray.gpvdm  bilayer.gpvdm  cigs.gpvdm  eqe.gpvdm  filter.gpvdm  fitting_example.gpvdm  micro_lense_demo.gpvdm  ofet.gpvdm  oled.gpvdm  organic_inverted.gpvdm  p3htpcbm.gpvdm  ray_trace_demo.gpvdm  silicon.gpvdm  simple_diode.gpvdm  tandem.gpvdm  tandem_si_perovskite.gpvdm
gpvdm_core/include/: advmath.h  cache.h  cache_struct.h  cal_path.h  checksum.h  circuit.h  circuit_struct.h  code_ctrl.h  color.h  colors.h  component.h  component_fun.h  config.h  contact_struct.h  contacts.h  contacts_vti_store.h  dat_file.h  dat_file_struct.h  detector.h  detector_struct.h  device.h  device_fun.h  dim.h  dll_export.h  dos.h  dos_an.h  dos_struct.h  dump.h  dump_ctrl.h  dynamic_store.h  enabled_libs.h  epitaxy.h  epitaxy_struct.h  exciton.h  exciton_fun.h  exciton_material.h  exp.h  fdtd.h  fit.h  functions.h  (+76 more)
gpvdm_core/inp_template/: Makefile.am  config.inp  contacts.inp  device.inp  dos0.inp  dump.inp  epitaxy.inp  homo0.inp  interface2.inp  light.inp  math.inp  mesh_x.inp  mesh_y.inp  parasitic.inp  perovskite.inp  pl0.inp  ray.inp  server.inp  shape0.inp  shape1.inp  shape2.inp  shape3.inp  shape4.inp  shape5.inp  sim.inp  view_point.inp
gpvdm_core/lib/: Makefile.am  cal_path.c  complex_solver_interface.c  epitaxy_materials.c  errors.c  gui_hooks.c  hard_limit.c  initial.c  inp.c  list.c  log.c  newton_interface.c  newton_update.c  patch.c  plot.c  solver_interface.c  startstop.c  timer.c  util.c  util_str.c  util_units.c  zip_buffer.c
gpvdm_core/libbasicmath/: Makefile.am  advmath.c  basic_math.c  object.c  objects.c  old.c  rand.c  triangle.c  triangles.c  triangles_add_btm.c  triangles_flags.c  triangles_min_max.c  triangles_reduce.c  triangles_reduce_nodes.c  triangles_roughness.c  vec.c  vectors.c
gpvdm_core/libcircuit/: Makefile.am  cal_photogen.c  cal_resistance.c  circuit.c  circuit_build.c  circuit_cpy.c  circuit_dump.c  circuit_dump_snapshot.c  circuit_init.c  circuit_load.c  circuit_memory.c  circuit_spm.c  circuit_transfer_to_electrical.c  circuit_umfpack_debug.c  circuit_util.c  component.c  links.c  nodes.c
gpvdm_core/libcolor/: Makefile.am  cie.c  wavelength_to_rgb.c
gpvdm_core/libcontacts/: Makefile.am  contact.c  contacts.c  contacts_cpy.c  contacts_free.c  contacts_load.c
gpvdm_core/libdevice/: Makefile.am  add_shape.c  build_scene.c  detectors.c  device_cache.c  device_cpy.c  device_free.c  device_heat.c  device_init.c  device_interface_doping.c  device_malloc.c  device_obj.c  device_paths.c  device_world_stats.c  epitaxy.c  epitaxy_cpy.c  epitaxy_dos.c  epitaxy_exciton.c  epitaxy_free.c  epitaxy_heat.c  epitaxy_init.c  epitaxy_interface.c  epitaxy_load.c  epitaxy_optical.c  epitaxy_shapes.c  epitaxy_singlet.c  find_n0.c  scene_dump.c  world_cpy.c  world_free.c  world_init.c  world_load.c  world_size.c
gpvdm_core/libdos/: Makefile.am  checksum.c  dos.c  dos_an.c  dos_cache.c  dos_config_load.c  dos_cpy.c  dos_free.c  dos_init.c  dos_ion.c  dos_mem_free.c  dos_trap.c  gendosfdgaus.c  hash.c  md5.c
gpvdm_core/libdump/: Makefile.am  cache.c  dat_file.c  dat_file_add_info.c  dat_file_add_zxy.c  dat_file_add_zxy_double.c  dat_file_add_zxy_float.c  dat_file_add_zxyt_long_double.c  dat_file_init.c  dat_file_load.c  dat_file_write_zxy_snapshot_as_slices.c  dat_file_zxyl_light.c  dump.c  dump_config.c  dump_contacts.c  dump_ctrl.c  dump_energy_slice.c  dump_map.c  dump_singlet.c  dump_snapshot_utils.c  dump_zx.c  dump_zxy.c  dump_zxy_charge.c  dump_zxy_interfaces.c  dynamic.c  dynamic_append.c  dynamic_dump_j.c  dynamic_dump_thermal.c  dynamic_free.c  dynamic_init.c  snapshots.c
gpvdm_core/libdumpctrl/: Makefile.am  dump_file.c
gpvdm_core/libfdtd/: Makefile.am  code.cl  fdtd.c  fdtd_config.c  fdtd_dump.c  fdtd_excitation.c  fdtd_init.c  fdtd_kernel.c  fdtd_lambda.c  fdtd_mem.c  fdtd_mesh.c  fdtd_opencl_kernel.c  fdtd_opencl_util.c  fdtd_power.c  fdtd_solve.c  fdtd_util.c  near_to_far.c  opencl_init.c  opencl_mem.c
gpvdm_core/libfit/: Makefile.am  fit.c  fit_build.c  fit_cmp_sim_and_exp.c  fit_config.c  fit_constraints.c  fit_dump.c  fit_duplicate.c  fit_error.c  fit_free.c  fit_init.c  fit_newton.c  fit_patch.c  fit_plot.c  fit_run.c  fit_simplex.c  fit_sync.c  fit_vars.c  my_df.c  my_f.c
gpvdm_core/libheat/: Makefile.am  heat_config.c  heat_cpy.c  heat_dump.c  heat_free.c  heat_init.c  heat_malloc.c  heat_material.c  heat_mesh.c  heat_set_initial_distribution.c  heat_solve.c  heat_stats.c  heat_utils.c  hydrodynamic_mesh_check.c  hydrodynamic_solve.c  hydrodynamic_update_heat.c  lattice_solve.c
gpvdm_core/libi/: Makefile.am  i.c  i_dft.c  i_math.c  i_mem.c  math_interpolate.c  math_xy_calculus.c  math_xy_delta.c  math_xy_dft.c  math_xy_load_save.c  math_xy_peak.c  math_xy_smooth.c
gpvdm_core/libjson/: Makefile.am  json.c  json_chk_sum.c  json_cpy.c  json_dump.c  json_free.c  json_init.c  json_search.c  json_string.c
gpvdm_core/liblight/: Makefile.am  light_config.c  light_cpy.c  light_dump.c  light_dump_snapshots.c  light_dump_verbose_1d.c  light_dump_verbose_2d.c  light_filter.c  light_free.c  light_init.c  light_interface.c  light_laser.c  light_materials.c  light_memory.c  light_mesh.c  light_solve.c  light_src.c  light_srcs.c  (+2 more)
gpvdm_data/: LICENSE.md  Makefile.am  README.md  configure.ac
gpvdm_gui/: LICENSE.txt  Makefile.am  README.md  configure.ac
(+1222 files in other folders)
